--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Home
-description: A place for things
+title: marcus ulmefors
+description: a place for things
 github_username: ulmefors
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "home"
