--- a/_config.yml
+++ b/_config.yml
@@ -37,11 +37,13 @@ url: "https://ulmefors.com" # "https://ulmefors.github.io" # the base hostname &
 baseurl: "" # "/home" # the subpath of your site, e.g. "/blog".
 
 # Github and twitter are optional:
+# ISO date format instead of US convention
 minima:
   social_links:
     linkedin: ulmefors
-    # twitter: fastdotai
+    # twitter: marcusulmefors
     github: ulmefors
+  date_format: "%Y-%m-%d"  # Reference https://github.com/jekyll/minima/blob/master/README.md#change-default-date-format
 
 # Set this to true to get LaTeX math equation support
 use_math:
