--- a/.github/workflows/check_config.yaml
+++ b/.github/workflows/check_config.yaml
@@ -5,10 +5,10 @@ jobs:
  check-config:
    runs-on: ubuntu-latest
    steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@v4
 
     - name: Set up Python
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v5
       with:
         python-version: 3.7
 
