--- a/_config.yml
+++ b/_config.yml
@@ -97,7 +97,8 @@ plugins:
 paginate: 15
 paginate_path: /page:num/
 
-remote_theme: jekyll/minima
+# Define minima version in Gemfile
+# remote_theme: jekyll/minima
 
 titles_from_headings:
   enabled:     true
